--- a/Hotel/css/room.css
+++ b/Hotel/css/room.css
@@ -8,6 +8,7 @@
   margin-top: -180px;
   margin-left: -200px;
   display: none;
+  border:2px black;
    
 }
 .model-container {
@@ -19,7 +20,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background: rgba(0, 0, 0, 0.6); }
+  background: rgba(0, 0, 0, 0.6); 
+}
 
 .heading {
   text-align: center;
@@ -80,4 +82,63 @@ th {
 }
 i{
   cursor: pointer;
+}
+.bg{
+  height:auto;
+  width: 500px;
+  background-color:white;
+    padding: 10px;
+    margin-left: 210px;
+    margin-top: 25px;
+    display: table;
+  
+}
+.tblh{
+  background-color: white;
+  text-align: center;
+  padding: 10px;
+}
+
+.tblrw{
+  background-color: rgba(37, 53, 81, 1);
+  text-align: center;
+
+}
+.tbld{
+    padding: 10px;
+}
+.status{
+  background-color:red;
+  padding:10px;
+  border-radius: 20px;
+  color:white;
+}
+.art{
+  font-size: 17px;
+  color: white;
+}
+.heading{
+    font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+    color:  rgb(0, 0, 0);
+    font-weight: bold;
+    font-size: 17px;
+}
+.subheading{
+    font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+    color:  white;
+    font-weight: bold;
+    font-size: 13px;
+}
+.search {
+  font-family:sans-serif;
+  background: #cfcaff;
+  width: 400px;
+  height:40px;
+  padding: 5px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border: 5px solid rgba(0, 0, 0, 0.25);
+  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
+  border-radius: 36px;
+  margin-top:20px;
 }
