--- a/Entrepreneur/css/dash.css
+++ b/Entrepreneur/css/dash.css
@@ -4,13 +4,8 @@
     box-sizing: border-box;
     font-family: Poppins,san-serif;
 }
-body{
-    width: 800px;
-    background-color: #ffffff;
-    position: relative;
-    display: flex;
-    background-size: cover;
-}
+
+
 /* header */
 
 header {
@@ -59,3 +54,140 @@ header {
       float: none;
     }
   } */
+  #menu{
+    background-color: white;
+    width: 250px;
+    height: 100%;
+    margin-top: 50px;
+  
+}
+#menu th,tr
+{
+    padding: 5px;
+}
+#menu h3{
+    align-items: center;
+    color: #0789C6;
+    margin-left: 65px;
+    margin-top: -40px;
+    margin-bottom: -20px;
+}
+#menu .logo{
+    display:flex ;
+    align-items: center;
+    color: rgb(18, 12, 44);
+    padding: 10px ;
+    margin-top: -30px;
+    
+    
+
+
+}
+#menu .logo img{
+    width: 50px;
+    height: 60px;
+    margin-right: 15px;
+    margin-bottom: 50px;
+
+
+}
+#menu .items {
+    margin-top: 40px;
+
+}
+#menu .items li{
+    list-style: none;
+    padding: 15px 0;
+    transition: 0.3s ease;
+}
+#menu .items li:hover{
+    background: rgba(7, 137, 198, 1);
+    cursor: pointer;
+
+}
+#menu .items li:nth-child(1){
+  border-left: 4px solid white;  
+}
+#menu .items li i{
+    color: rgb(134,141,151);
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-size: 14px;
+    margin: 0 10px 0 25px;
+
+
+
+}
+#menu .items li:hover i,
+#menu .items li:hover a{
+    color: #F3F4F6;
+}
+#menu .items li a{
+    text-decoration: none;
+    color: black;
+    font-weight: 300px;
+    transition: 0.3s ease;
+}
+#interface{
+    width: 1260px;
+    height: 600px;
+    background: rgba(3, 70, 102, 1);
+    margin-top:-300px;
+    margin-left: 250px;
+}
+
+.values{
+  padding: 30px 30px 0 30px;  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+
+}
+.values .val-box{
+    background: white;
+    width: 235px;
+    padding:16px 20px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.values .val-box i{
+    font-size: 25px;
+    width: 60px;
+    height: 60px;
+    line-height: 60px;
+    border-radius: 50%;
+    text-align: center;
+    color:  #022535;
+    margin-right: 15px;
+
+}
+.values .val-box :nth-child(1) i{
+    background: #3d73de;
+
+}
+.values .val-box :nth-child(2) i{
+    background: #594ef7;
+}
+.values .val-box :nth-child(3) i{
+    background: #444a53;
+}
+.values .val-box :nth-child(4) i{
+    background: rebeccapurple;
+}
+
+.values .val-box h3{
+    font-size: 18px;
+    font-weight: 600;
+    color: #3751FF;
+
+}
+.values .val-box span{
+    font-size: 15px;
+    color: #3751FF;
+}
+
