--- a/Entrepreneur/css/pstyle.css
+++ b/Entrepreneur/css/pstyle.css
@@ -249,6 +249,10 @@ margin-bottom: 15px;
               float:right;
               margin-top: -40px;
             }
+            table {
+              border-collapse: collapse;
+              width: 80%;
+            }
             
               
             
