--- a/Entrepreneur/css/header.css
+++ b/Entrepreneur/css/header.css
@@ -2,12 +2,12 @@
 
 header {
   overflow: hidden;
-  background-color: #ffffff;
+  background-color: #004581;
 }
 
 header a {
   float: left;
-  color: rgba(37, 53, 81, 1);
+  color: white;
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -29,7 +29,7 @@ header a.logo {
 } */
 
 header a.active {
-  background-color: rgba(37, 53, 81, 1);
+  background-color: white;
   color: white;
 }
 
