--- a/Entrepreneur/css/nav.css
+++ b/Entrepreneur/css/nav.css
@@ -12,7 +12,7 @@
   top: 0;
   height: 100%;
   width: 78px;
-  background: #ffffff;
+  background: #004581;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
@@ -122,7 +122,7 @@
   left: 0;
   transform: translateY(-50%);
   font-size: 22px;
-  background: rgba(37, 53, 81, 1);
+  background: white;
   color: #FFF;
 }
 .sidebar.open .bx-search:hover{
@@ -224,7 +224,7 @@
 }
 .home-section{
   position: relative;
-  background: #0789C6;;
+  background: #DDE8F0;
   min-height: 100vh;
   top: 0;
   left: 78px;
