--- a/Entrepreneur/css/signup.css
+++ b/Entrepreneur/css/signup.css
@@ -1,10 +1,10 @@
 body{
-    background-color: #0789C6;
+    background-color: #DDE8F0;
     margin: 0;
     padding: 0;
 }
 .registerForm{
-    background-color:rgba(37, 53, 81, 1);
+    background-color:white;
 margin-bottom: 20px;
     width: 1335px;
     padding: 10px;
@@ -14,7 +14,7 @@ margin-bottom: 20px;
 }
 .heading{
     font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-    color:  white;
+    color:  black;
     font-weight: bold;
     font-size: 23px;
 }
@@ -29,7 +29,7 @@ margin-bottom: 20px;
     color:  white;
     font-weight: bold;
     font-size: 13px;
-    color:white;
+    color:black;
     margin-left:80px;
     margin-top:12px;
 }
@@ -49,46 +49,5 @@ margin-bottom: 20px;
 .form button:hover,.form button:active,.form button:focus {
   background: #4169E1;
 }
-.subfield {
-  font-family:sans-serif;
-  background: #cfcaff;
-  width: 565px;
-  height:30px;
-  padding: 5px;
-  box-sizing: border-box;
-  font-size: 14px;
-  border: 5px solid rgba(0, 0, 0, 0.25);
-  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
-  border-radius: 36px;
-  margin-top:5px;
-}
 
 
-.row{
-    display: table-row;
-}
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-table{
-    width: 100%;
-}
-th {
-  text-align: left;
-}
-.btn{
-  background-color: #0789C6;
-  border: none;
-  color: white;
-  padding: 14px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 35px 280px;
-  cursor: pointer;
-  border-radius: 5px;
-  width: 50%;
-  }
