--- a/css/hotel.css
+++ b/css/hotel.css
@@ -1,4 +1,4 @@
-  /* header */
+/* header */
 
 header {
   overflow: hidden;
@@ -11,10 +11,10 @@ header a {
   text-align: center;
   padding: 5px;
   text-decoration: none;
-  font-size: 15px; 
+  font-size: 15px;
   line-height: 25px;
   border-radius: 4px;
-  font-family:sans-serif;
+  font-family: sans-serif;
   font-weight: bold;
 }
 
@@ -36,7 +36,7 @@ header a.active {
 .header-right {
   float: right;
   margin-top: 16px;
-  padding-right:30px;
+  padding-right: 30px;
 }
 /* 
 @media screen and (max-width: 750px) {
@@ -56,8 +56,8 @@ span.b {
   width: 300px;
   height: 225px;
   padding: 5px;
-  border: 1px solid rgba(37, 53, 81, 1);    
-  background-color: white; 
+  border: 1px solid rgba(37, 53, 81, 1);
+  background-color: white;
   margin-top: 10px;
 }
 span.c {
@@ -65,117 +65,125 @@ span.c {
   width: 530px;
   height: 400px;
   padding: 5px;
-  border: 1px solid rgba(37, 53, 81, 1);    
-  background-color: rgba(37, 53, 81, 1); 
+  border: 1px solid rgba(37, 53, 81, 1);
+  background-color: rgba(37, 53, 81, 1);
   margin-bottom: 10px;
 }
-.heading{
-    font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-    color:  rgba(37, 53, 81, 1);
-    font-weight: bold;
-    font-size: 17px;
-    text-align: center;
+.heading {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgba(37, 53, 81, 1);
+  font-weight: bold;
+  font-size: 17px;
+  text-align: center;
 }
-.chart{
-    font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-    color:  rgb(255, 255, 255);
-    font-weight: bold;
-    font-size: 17px;
-    text-align: center;
+.chart {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 17px;
+  text-align: center;
 }
-
 
 /* pkg */
 
-body{
-    background-color: #0789C6;
-    margin: 0;
-    padding: 0;
+body {
+  background-color: #dde8f0;
+  margin: 0;
+  padding: 0;
 }
-.registerForm{
-    background-color:rgba(37, 53, 81, 1);
-    width: 885px;
-    padding: 10px;
-    margin-left: 210px;
-    margin-top: 25px;
-    display: table;
-    margin-bottom: 30px;
-    /* height: 200px; */
+.registerForm {
+  background-color: rgb(255, 255, 255);
+  width: 885px;
+  padding: 60px;
+  margin-left: 210px;
+  margin-top: 20px;
+  display: table;
+  margin-bottom: 30px;
+  /* height: 200px; */
 }
-.heading{
-    font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-    color:  rgb(0, 0, 0);
-    font-weight: bold;
-    font-size: 17px;
+.heading {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 27px;
+  padding: 10px;
+  text-align: center;
 }
-.subheading{
-    font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-    color:  white;
-    font-weight: bold;
-    font-size: 13px;
+.subheading {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 20px;
 }
-.content{
-    font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-    color:  white;
-    font-weight: bold;
-    font-size: 15px;
-    color:white;
-    margin-left:80px;
-    margin-top:12px;
+.content {
+  font-style: "helvetica neue", helvetica, tahoma, sans-serif;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: 25px;
 }
 .field {
-  font-family:sans-serif;
-  background: #cfcaff;
-  width: 75%;
-  height:30px;
-  margin: 0 0 15px;
-  padding: 5px;
+  font-family: sans-serif;
+  background: #dde8f0;
+  width: 95%;
+  height: 30px;
+  margin: 5px 0 15px;
+  padding: 10px;
   box-sizing: border-box;
   font-size: 14px;
-  border: 5px solid rgba(0, 0, 0, 0.25);
-  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
-  border-radius: 36px;
+  border: 2px solid rgba(34, 50, 194, 0.25);
+  border-radius: 10px;
 }
-.form button:hover,.form button:active,.form button:focus {
-  background: #4169E1;
+.field:hover,
+.field:focus {
+  outline: none;
+  border: 3px solid rgba(1, 6, 56, 0.25);
+}
+.form button:hover,
+.form button:active,
+.form button:focus {
+  background: #4169e1;
 }
 .subfield {
-  font-family:sans-serif;
-  background: #cfcaff;
-  width: 400px;
-  height:40px;
+  font-family: sans-serif;
+  background: #dde8f0;
+  width: 90%;
+  height: 30px;
+  margin: 10px 0 0;
   padding: 5px;
   box-sizing: border-box;
   font-size: 14px;
-  border: 5px solid rgba(0, 0, 0, 0.25);
-  filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
-  border-radius: 36px;
-  margin-top:20px;
+  border: 2px solid rgba(34, 50, 194, 0.25);
+  border-radius: 10px;
+}
+.subfield:hover,
+.subfield:focus {
+  outline: none;
+  border: 3px solid rgba(1, 6, 56, 0.25);
 }
 
-table{
-    width: 100%;
-    margin-top:40px;
+table {
+  width: 100%;
+  margin: 0px;
 }
-th {
-  text-align: left;
-}
-.btn{
-  background-color:white;
-  border: 5px solid #0789C6;
-  color: black;
-  padding: 10px;
+
+
+.btnRegister {
+  background-color: #004581;
+  border: none;
+  color: white;
+  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  margin: 60px 100px;
+  margin: 30px 2px;
   cursor: pointer;
   border-radius: 5px;
-  width: 15%;
-  }
-  .btn1{
-  background-color: #0789C6;
+  width: 100%;
+}
+.btn1 {
+  background-color: #0789c6;
   border: none;
   color: white;
   padding: 10px 10px;
@@ -187,44 +195,39 @@ th {
   cursor: pointer;
   border-radius: 5px;
   width: 15%;
-  }
-.bg{
-  height:auto;
-  width: 500px;
-  background-color:white;
-    padding: 10px;
-    margin-left: 210px;
-    margin-top: 25px;
-    display: table;
-  
 }
-.tblh{
+.bg {
+  height: auto;
+  width: 500px;
+  background-color: white;
+  padding: 10px;
+  margin-left: 210px;
+  margin-top: 25px;
+  display: table;
+}
+.tblh {
   background-color: white;
   text-align: center;
   padding: 10px;
 }
 
-.tblrw{
+.tblrw {
   background-color: rgba(37, 53, 81, 1);
   text-align: center;
-
 }
-.tbld{
-    padding: 10px;
+.tbld {
+  padding: 10px;
 }
-.status{
-  background-color:red;
-  padding:10px;
+.status {
+  background-color: red;
+  padding: 10px;
   border-radius: 20px;
-  color:white;
+  color: white;
 }
-.art{
+.art {
   font-size: 17px;
   color: white;
 }
-i{
-  cursor:pointer;
+i {
+  cursor: pointer;
 }
-
-
-
