--- a/css/login.css
+++ b/css/login.css
@@ -1,15 +1,15 @@
-body{
-    background-image: url('../images/bg.jpg');
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin: 0;
-    padding: 0;
+body {
+  background-image: url("../images/bg.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin: 0;
+  padding: 0;
 }
-.text{
+.text {
   font-style: "helvetica neue", helvetica, tahoma, sans-serif;
-  color:  #004581;
+  color: #000000;
   font-weight: bold;
 }
 
@@ -20,13 +20,13 @@ body{
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px;
-  background-color:rgba(255, 255, 255, 0.699);
+  background-color: rgba(255, 255, 255, 0.719);
   margin-left: 845px;
-  margin-top:90px;
+  margin-top: 90px;
 }
 .field {
-  font-family:sans-serif;
-  background: #C0C0C0;
+  font-family: sans-serif;
+  background: rgba(255, 255, 255, 0.562);
   width: 100%;
   margin: 0 0 15px;
   padding: 15px;
@@ -36,28 +36,22 @@ body{
   /* filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25)); */
   border-radius: 12px;
 }
-.field:focus{
+.field:focus {
   border: 1px solid #01447e;
+  outline: none;
+  background: rgb(255, 255, 255);
 }
-.form button:hover,.form button:active,.form button:focus {
-  background: #4169E1;
-}
-.form .message a{
-  color: #1c49db;
-}
-.form .message  {
-  color: #410a0a;
-  font-size: 15px;
-  margin: 13px;
+
+.form a {
+  color: #004581;
 }
 
 .form label {
-   float: left;
-   font-family:sans-serif;
+  float: left;
+  font-family: sans-serif;
 }
 
-
-.btn{
+.btn {
   background-color: #004581;
   border: none;
   color: white;
@@ -70,10 +64,9 @@ body{
   cursor: pointer;
   border-radius: 5px;
   width: 100%;
-  }
+}
 
-
-  /* header */
+/* header */
 
 header {
   overflow: hidden;
@@ -86,10 +79,10 @@ header a {
   text-align: center;
   padding: 5px;
   text-decoration: none;
-  font-size: 15px; 
+  font-size: 15px;
   line-height: 25px;
   border-radius: 4px;
-  font-family:sans-serif;
+  font-family: sans-serif;
   font-weight: bold;
 }
 
@@ -111,7 +104,7 @@ header a.active {
 .header-right {
   float: right;
   margin-top: 16px;
-  padding-right:30px;
+  padding-right: 30px;
 }
 /* 
 @media screen and (max-width: 750px) {
@@ -125,18 +118,3 @@ header a.active {
     float: none;
   }
 } */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
