--- a/css/add.css
+++ b/css/add.css
@@ -283,3 +283,57 @@ input[type=submit]:hover {
     margin-top: 0;
   }
 }
+
+
+/*header.css*/
+
+header {
+  overflow: hidden;
+  background-color: #004581;
+}
+
+header a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 15px; 
+  line-height: 25px;
+  border-radius: 4px;
+  font-family:sans-serif;
+  font-weight: bold;
+}
+
+header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+/* header a:hover {
+  background-color: #ddd;
+  color: black;
+} */
+
+header a.active {
+  background-color: white;
+  color: white;
+}
+
+.header-right {
+  float: right;
+  margin-top: -37px;
+  padding-right:30px;
+}
+/* 
+@media screen and (max-width: 750px) {
+  .header a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .header-right {
+    float: none;
+  }
+} */
