--- a/css/entrepreneur.css
+++ b/css/entrepreneur.css
@@ -52,7 +52,7 @@ body{
   background: url(hummanaya.jpg); 
   background-size: cover;
   background-position: center;
-  font-family: poppins;
+  font-family: sans-serif;
   background-repeat: no-repeat;
 }
 .resetbox{
@@ -112,10 +112,10 @@ h1{
 body{
   margin: 0;
   padding: 0;
-  background: url(../Images/hummanaya.jpg); 
+  background: url(../Images/bg.jpg); 
   background-size: cover;
   background-position: center;
-  font-family: poppins;
+  font-family:sans-serif;
   background-repeat: no-repeat;
 }
 
@@ -157,6 +157,7 @@ h1{
    margin-top: -10px;
    border-radius: 10px;
    height:35px;
+   margin-left: 20px;
 }
 .loginbox input[type="submit"]{
    color:none;
@@ -469,13 +470,7 @@ border-radius: 10px;
 margin-top:20px;
 }
 
-table{
-  width: 100%;
-  margin-top:40px;
-}
-th {
-text-align: left;
-}
+ 
 .btn{
 background-color:white;
 border: 5px solid #004581;
@@ -504,37 +499,20 @@ cursor: pointer;
 border-radius: 5px;
 width: 15%;
 }
-.bg{
-height:auto;
-width: 500px;
-background-color:white;
-  padding: 10px;
-  margin-left: 210px;
-  margin-top: 25px;
-  display: table;
 
-}
-.fa-regular
-.tblh{
-background-color: white;
-text-align: center;
-padding: 10px;
-}
+
+
 
 .tblrw{
-background-color: rgba(37, 53, 81, 1);
+background-color: white;
 text-align: center;
+width: 75%;
 
 }
 .tbld{
   padding: 10px;
 }
-.status{
-background-color:red;
-padding:10px;
-border-radius: 20px;
-color:white;
-}
+
 .art{
 font-size: 17px;
 color: white;
@@ -558,11 +536,11 @@ background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 
 /* Modal Content */
 .modal-content {
-background-color: #fefefe;
+background-color:#fefefe;
 margin: auto;
 padding: 20px;
 border: 1px solid #888;
-width: 80%;
+width: 60%;
 }
 
 /* The Close Button */
@@ -579,43 +557,9 @@ color: #000;
 text-decoration: none;
 cursor: pointer;
 }
-/*search button*/
-form.example input[type=text] {
-padding: 10px;
-font-size: 17px;
-border: 1px solid grey;
-border-radius: 10px;
-float: left;
-width: 100%;
-background: #f1f1f1;
-margin-top: 20px;
-margin-left: -400px;
-float: right;
-}
 
-form.example button {
-float: right;
-width: 20%;
-padding: 10px;
-background: #004581;
-color: white;
-font-size: 17px;
-border: 1px solid grey;
-border-left: none;
-cursor: pointer;
-margin-top: 20px;
-margin-left: -150px;
-}
 
-form.example button:hover {
-background: #DDE8F0;
-}
 
-form.example::after {
-content: "";
-clear: both;
-display: table;
-}
 
 
 input[type=text], select, textarea {
@@ -624,6 +568,7 @@ padding: 12px;
 border: 1px solid #ccc;
 border-radius: 4px;
 resize: vertical;
+margin-left: 80px;
 }
 input[type=number],select{
 width: 100%;
@@ -631,6 +576,7 @@ padding: 12px;
 border: 1px solid #ccc;
 border-radius: 4px;
 resize: vertical;
+margin-left: 80px;
 }
 
 label {
@@ -645,7 +591,7 @@ padding: 12px 20px;
 border: none;
 border-radius: 4px;
 cursor: pointer;
-float: right;
+float: center;
 }
 
 input[type=submit]:hover {
@@ -657,8 +603,9 @@ border-radius: 5px;
 background-color: #f2f2f2;
 padding: 20px;
 width:700px;
-margin-left: 200px;
+margin-left: 100px;
 margin-top: 20px;
+height: 400px;
 
 }
 
@@ -687,6 +634,19 @@ clear: both;
   width: 100%;
   margin-top: 0;
 }
+}
+.bg table, td, th {
+  border: 1px solid black;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td {
+  height: 50px;
+  vertical-align: bottom;
 }
 
 /*chat*/
