--- a/css/entrepreneur_login.css
+++ b/css/entrepreneur_login.css
@@ -2,7 +2,7 @@
 body{
    margin: 0;
    padding: 0;
-   background: url(../Images/hummanaya.jpg); 
+   background: url(../Images/bg.jpg); 
    background-size: cover;
    background-position: center;
    font-family: sans-serif;
@@ -10,16 +10,16 @@ body{
 }
 .loginbox{
     width: 460px;
-    height: 470px;
-    background: rgb(255, 255, 255, 0.85);
+    height: 500px;
+    background: #DDE8F0;
     color: rgb(12, 0, 0);
     top: 50%;
-    left: 65%;
+    left: 45%;
     position: absolute;
     transform: translate(-25%,-50%);
     box-sizing: border-box;
     padding: 70px;
-    border-radius:5%;
+    border-radius:3%;
 
 }
 h1{
@@ -44,7 +44,9 @@ h1{
     margin-bottom: 20px;
     border-radius: 10px;
     height:35px;
+    margin-left: -20px;
 }
+
 .loginbox input[type="submit"]{
     color:none;
     border-radius: 20px;
