--- a/css/entrepreneur.css
+++ b/css/entrepreneur.css
@@ -46,15 +46,8 @@ header a.active {
 
 /*Reset password*/
 
-body{
-  margin: 0;
-  padding: 0;
-  background: url(hummanaya.jpg); 
-  background-size: cover;
-  background-position: center;
-  font-family: sans-serif;
-  background-repeat: no-repeat;
-}
+
+
 .resetbox{
    width: 460px;
    height: 430px;
@@ -112,7 +105,7 @@ h1{
 body{
   margin: 0;
   padding: 0;
-  background: url(../Images/bg.jpg); 
+  background: url(../Images/background.jpg); 
   background-size: cover;
   background-position: center;
   font-family:sans-serif;
@@ -409,6 +402,37 @@ body{
   margin: 0;
   padding: 0;
 
+}
+/*Search button*/
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+#myTable {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #ddd;
+  font-size: 18px;
+}
+
+#myTable th, #myTable td {
+  text-align: left;
+  padding: 12px;
+}
+
+#myTable tr {
+  border-bottom: 1px solid #ddd;
+}
+
+#myTable tr.header, #myTable tr:hover {
+  background-color: #f1f1f1;
 }
 
 .registerForm{
