--- a/css/entrepreneur_login.css
+++ b/css/entrepreneur_login.css
@@ -2,7 +2,7 @@
 body{
    margin: 0;
    padding: 0;
-   background: url(../Images/bg.jpg); 
+   background: url(../Images/background.jpg); 
    background-size: cover;
    background-position: center;
    font-family: sans-serif;
