--- a/css/hotel.css
+++ b/css/hotel.css
@@ -200,26 +200,27 @@ table {
 }
 .bg {
   height: auto;
-  width: 500px;
+  width: 100%;
   background-color: white;
   padding: 10px;
-  margin-left: 210px;
+  margin-left: 0px;
   margin-top: 25px;
   display: table;
 }
 .tblh {
   background-color: white;
-  text-align: center;
+  text-align: left;
   padding: 10px;
+   border-bottom: 1px solid #ddd;
 }
 
-.tblrw {
-  background-color: rgba(37, 53, 81, 1);
-  text-align: center;
-}
 .tbld {
   padding: 10px;
+   border-bottom: 1px solid #ddd;
 }
+/* th, td{
+    border-bottom: 1px solid #ddd;
+} */
 .status {
   background-color: red;
   padding: 10px;
@@ -228,8 +229,126 @@ table {
 }
 .art {
   font-size: 17px;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 i {
   cursor: pointer;
 }
+#search {
+  background-image: url('../images/search.png');
+  background-position: 10px 7px;
+  background-size: 28px;
+  background-repeat: no-repeat;
+  width: 97%;
+  font-size: 15px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
+
+#myUL {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+#myUL li a {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block
+}
+
+#myUL li a:hover:not(.header) {
+  background-color: #eee;
+}
+
+.chartimg{
+  margin-top:20px;
+  margin-right:20px;
+  padding:10px;
+}
+
+/* profile */
+.wrapper{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%,-50%); 
+   width: 1000px;
+   height: 400px;
+   display: flex;
+   box-shadow: 0 1px 20px 0 white;
+}
+.wrapper .left{
+    width: 35%;
+    background:#76b6c4;
+    padding:30px 25px ;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    text-align: center;
+    color:black;
+}
+.wrapper .left img{
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+.wrapper .left h3{
+    margin-bottom: 10px;
+}
+.wrapper .left p{
+    font-size: 12px;
+}
+.wrapper .right{
+    width: 65%;
+    background: #fff;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 30px 25px;
+}
+.wrapper .right .info,
+.wrapper .right .projects{
+    margin-bottom: 25px;
+
+}
+.wrapper .right .info h3,
+.wrapper .right .projects h3{
+    margin-bottom: 15px;
+    padding-bottom: 5px ;
+    border-bottom: 1px solid #e0e0e0;
+    color: #353c4e;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    
+}
+.wrapper .right .info_data,
+.wrapper .right .projects_data{
+    display: flex;
+    justify-content: space-between;
+}
+.wrapper .right .info_data .data,
+.wrapper .right .projects_data .data{
+    width: 45%;
+}
+.wrapper .right .info_data .data h4,
+.wrapper .right .projects_data .data h4{
+    width: 45%;
+}
+.button {
+    background-color: #004581;
+    border: none;
+    color: white;
+    padding: 12px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    margin-left: 250px;
+    margin-top: 10px;
+    border-radius: 10px;
+  }
