--- a/css/nav.css
+++ b/css/nav.css
@@ -1,10 +1,8 @@
-/* Google Font Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
+  font-family: sans-serif;
 }
 .sidebar{
   position: fixed;
@@ -20,28 +18,25 @@
 .sidebar.open{
   width: 250px;
 }
-.sidebar .logo-details{
+.sidebar .intro{
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-.sidebar .logo-details .icon{
-  opacity: 0;
-  transition: all 0.5s ease;
-}
-.sidebar .logo-details .logo_name{
-  color: white;
+
+.sidebar .intro .welcome{
+  color: rgb(255, 255, 255);
   font-size: 20px;
   font-weight: 600;
   opacity: 0;
   transition: all 0.5s ease;
 }
-.sidebar.open .logo-details .icon,
-.sidebar.open .logo-details .logo_name{
+.sidebar.open .intro,
+.sidebar.open .intro .welcome{
   opacity: 1;
 }
-.sidebar .logo-details #btn{
+.sidebar .intro #btn{
   position: absolute;
   top: 50%;
   right: 0;
@@ -53,7 +48,7 @@
   cursor: pointer;
   transition: all 0.5s ease;
 }
-.sidebar.open .logo-details #btn{
+.sidebar.open .intro #btn{
   text-align: right;
 }
 .sidebar i{
@@ -64,7 +59,7 @@
   text-align: center;
   line-height: 60px;
 }
-.sidebar .nav-list{
+.sidebar .nav{
   margin-top: 50px;
   height: 100%;
 }
@@ -73,7 +68,7 @@
   margin: 8px 0;
   list-style: none;
 }
-.sidebar li .tooltip{
+.sidebar li .desc{
   position: absolute;
   top: -20px;
   left: calc(100% + 15px);
@@ -89,49 +84,15 @@
   pointer-events: none;
   transition: 0s;
 }
-.sidebar li:hover .tooltip{
+.sidebar li:hover .desc{
   opacity: 1;
   pointer-events: auto;
   transition: all 0.4s ease;
   top: 50%;
   transform: translateY(-50%);
 }
-.sidebar.open li .tooltip{
+.sidebar.open li .desc{
   display: none;
-}
-.sidebar input{
-  font-size: 15px;
-  color: #FFF;
-  font-weight: 400;
-  outline: none;
-  height: 50px;
-  width: 100%;
-  width: 50px;
-  border: none;
-  border-radius: 12px;
-  transition: all 0.5s ease;
-  background: rgba(37, 53, 81, 1);
-}
-.sidebar.open input{
-  padding: 0 20px 0 50px;
-  width: 100%;
-}
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: white;
-  color: #FFF;
-}
-.sidebar.open .bx-search:hover{
-  background: rgba(37, 53, 81, 1);
-  color: #FFF;
-}
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: rgba(37, 53, 81, 1);
 }
 .sidebar li a{
   display: flex;
@@ -143,10 +104,11 @@
   transition: all 0.4s ease;
   background: rgba(37, 53, 81, 1);
 }
+
 .sidebar li a:hover{
   background: #FFF;
 }
-.sidebar li a .links_name{
+.sidebar li a .link{
   color: #fff;
   font-size: 15px;
   font-weight: 400;
@@ -155,11 +117,11 @@
   pointer-events: none;
   transition: 0.4s;
 }
-.sidebar.open li a .links_name{
+.sidebar.open li a .link{
   opacity: 1;
   pointer-events: auto;
 }
-.sidebar li a:hover .links_name,
+.sidebar li a:hover .link,
 .sidebar li a:hover i{
   transition: all 0.5s ease;
   color: rgba(37, 53, 81, 1);
@@ -193,14 +155,22 @@
   margin: 18px
 }
 @media (max-width: 420px) {
-  .sidebar li .tooltip{
+  .sidebar li .desc{
+    display: none;
+  }
+}
+@media (max-width: 420px) {
+  .sidebar div .desc{
     display: none;
   }
 }
 hr{
   margin-top:200px;
 }
-.sidebar div .tooltip{
+
+
+
+.sidebar div .desc{
   position: absolute;
   top: 120px;
   left: calc(100% + 15px);
@@ -216,7 +186,7 @@ hr{
   pointer-events: none;
   transition: 0s;
 }
-.sidebar div:hover .tooltip{
+.sidebar div:hover .desc{
   opacity: 1;
   pointer-events: auto;
   transition: all 0.4s ease;
@@ -224,7 +194,7 @@ hr{
   left:100%;
   transform: translateY(-50%);
 }
-.sidebar.open div .tooltip{
+.sidebar.open div .desc{
   display: none;
 }
 .sidebar div a{
