--- a/css/chat.css
+++ b/css/chat.css
@@ -198,10 +198,10 @@ main footer{
 }
 main footer textarea{
 	resize:none;
-	border:none;
-	display:block;
-	width:100%;
-	height:80px;
+	border-width:3px;
+	border-color: #004581;
+	width:70%;
+	height:60px;
 	border-radius:3px;
 	padding:20px;
 	font-size:13px;
@@ -220,7 +220,7 @@ main footer a{
 	font-weight:bold;
 	color:#6fbced;
 	vertical-align:top;
-	margin-left:333px;
-	margin-top:5px;
+	margin-left:383px;
+	margin-top:-50px;
 	display:inline-block;
 }
