--- a/css/admins.css
+++ b/css/admins.css
@@ -22,7 +22,7 @@
   .add>a{
     background-color: #ffffff;
     float: right;
-    
+    margin-top: -23px;
     margin-right: 2%;
     margin-bottom: 10px;
     height: 24px;
@@ -65,8 +65,8 @@
   }
   
   .booked-packages-list>.booked-packages-card>a > img{
-    width: 20%;
-    height: 9%;
+    width: 48px;
+    height: 55px;
     border-radius: 18.46px;
     
   }
