--- a/css/header.css
+++ b/css/header.css
@@ -2,19 +2,19 @@
 
 header {
   overflow: hidden;
-  background-color: #ffffff;
+  background-color: #004581;
 }
 
 header a {
   float: left;
-  color: rgba(37, 53, 81, 1);
+  color: rgb(255, 255, 255);
   text-align: center;
-  padding: 12px;
+  padding: 5px;
   text-decoration: none;
-  font-size: 15px; 
+  font-size: 15px;
   line-height: 25px;
   border-radius: 4px;
-  font-family:sans-serif;
+  font-family: sans-serif;
   font-weight: bold;
 }
 
@@ -29,28 +29,12 @@ header a.logo {
 } */
 
 header a.active {
-  background-color: rgba(37, 53, 81, 1);
+  background-color: rgb(255, 255, 255);
   color: white;
 }
 
 .header-right {
   float: right;
-  margin-top: -37px;
-  padding-right:30px;
+  margin-top: 16px;
+  padding-right: 30px;
 }
-/* 
-@media screen and (max-width: 750px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .header-right {
-    float: none;
-  }
-} */
-
-
-
-
