--- a/css/tourpackage.css
+++ b/css/tourpackage.css
@@ -65,7 +65,7 @@ body{
   color: white;
   padding: 5px 5px;
   width:90%;
-  height: 10% ;
+  height: 85px;
   margin-bottom: 10px;
   border-radius: 18.2357px;
   
@@ -136,7 +136,7 @@ height: 33px;
 left: 80%;
 
 
-background: #E9C242;
+background: #e96756;
 border-radius: 8px;
 
 font-style: normal;
