--- a/css/entrepreneur.css
+++ b/css/entrepreneur.css
@@ -7,6 +7,7 @@ header {
   overflow: hidden;
   background-color: #004581;
   height: 70px;
+  display: fixed;
   
 }
 
@@ -535,7 +536,7 @@ table {
 }
 .tblh {
   background-color: white;
-  text-align: left;
+  text-align: center;
   padding: 30px;
    border-bottom: 5px solid #ddd;
 }
