--- a/css/chat.css
+++ b/css/chat.css
@@ -6,8 +6,8 @@ body{
 	font-family:Arial;
 }
 #container{
-	width:750px;
-	height:800px;
+	width:1250px;
+	height:750px;
 	background:white;
 	margin:0 auto;
 	font-size:0;
@@ -223,4 +223,45 @@ main footer a{
 	margin-left:383px;
 	margin-top:-50px;
 	display:inline-block;
+}
+
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+/* Button used to open the contact form - fixed at the bottom of the page */
+.open-button {
+  background-color: #555;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  opacity: 0.8;
+  position: fixed;
+  bottom: 23px;
+  right: 28px;
+  width: 480px;
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+  max-width: 730px;
+}
+
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+  background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+  opacity: 1;
 }
