--- a/css/entrepreneur.css
+++ b/css/entrepreneur.css
@@ -534,7 +534,7 @@ table {
 }
 .tblh {
   background-color: white;
-  text-align: left;
+  text-align: center;
   padding: 30px;
    border-bottom: 5px solid #ddd;
 }
