--- a/css/modelbox.css
+++ b/css/modelbox.css
@@ -13,19 +13,19 @@ input {
 }
 
 /* Set a style for all buttons */
-button {
+/* button {
   background-color: #04aa6d;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
-  /* width: 100%; */
-}
+  width: 100%;
+} */
 
-button:hover {
+/* button:hover {
   opacity: 0.8;
-}
+} */
 
 /* Extra styles for the cancel button */
 .cancelbtn {
