--- a/css/chat.css
+++ b/css/chat.css
@@ -6,6 +6,9 @@ body{
   background: #f7f7f7;
   /* padding: 0 10px; */
 }
+a{
+  text-decoration: none;
+}
 .wrappers{
   background: #fff;
   max-width: 450px;
@@ -140,27 +143,27 @@ body{
 }
 
 /* Chat Area CSS Start */
-.chat-area header{
+.chat-area .chatTop{
   display: flex;
   align-items: center;
   padding: 18px 30px;
 }
-.chat-area header .back-icon{
+.chat-area .chatTop .back-icon{
   color: #333;
   font-size: 18px;
 }
-.chat-area header img{
+.chat-area .chatTop img{
   height: 45px;
   width: 45px;
   margin: 0 15px;
 }
-.chat-area header .details span{
+.chat-area .chatTop .details span{
   font-size: 17px;
   font-weight: 500;
 }
 .chat-box{
   position: relative;
-  min-height: 500px;
+  min-height: 380px;
   max-height: 500px;
   overflow-y: auto;
   padding: 10px 30px 20px 30px;
