--- a/css/packagedescription.css
+++ b/css/packagedescription.css
@@ -31,6 +31,21 @@ body {
 
 }
 
+.data {
+    font-family: montserrat;
+    border-collapse: collapse;
+    width: 70%;
+    margin-top: 25%;
+    margin-left: 20%;
+    margin-right: 10%;
+  }
+  
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+
 .detail{
 display: block;
 margin-top: 30%;
