--- a/css/entrepreneur.css
+++ b/css/entrepreneur.css
@@ -8,6 +8,7 @@ header {
   background-color: #004581;
   height: 70px;
   display: fixed;
+  margin-left: -100px;
   
 }
 
@@ -28,7 +29,9 @@ header a.logo {
   font-size: 25px;
   font-weight: bold;
 }
-
+.logo{
+  margin-left: 60px;
+}
 /* header a:hover {
   background-color: #ddd;
   color: black;
@@ -107,7 +110,7 @@ h1{
 body{
   margin: 0;
   padding: 0;
-  background: url(../Images/background.jpg); 
+  background: url(); 
   background-size: cover;
   background-position: center;
   font-family:sans-serif;
@@ -261,7 +264,7 @@ margin-bottom: 20px;
   background-color: #004581;
   border: none;
   color: white;
-  padding: 12px 32px;
+  padding: 12px 40px;
   text-align: center;
   text-decoration: none;
   font-size: 16px;
@@ -269,7 +272,7 @@ margin-bottom: 20px;
   cursor: pointer;
   margin-left: 250px;
   margin-top: 10px;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 .registerForm{
   background-color:rgb(255, 255, 255);
@@ -429,12 +432,13 @@ body {
   font-weight: bold;
   font-size: 20px;
 }
-.content {
+.model .content {
   font-style: "helvetica neue", helvetica, tahoma, sans-serif;
   color: rgb(0, 0, 0);
   font-weight: bold;
   font-size: 15px;
   margin-top: 25px;
+  margin-left: 20px;
 }
 .field {
   font-family: sans-serif;
@@ -442,7 +446,7 @@ body {
   width: 95%;
   height: 30px;
   margin: 5px 0 15px;
-  padding: 10px;
+  padding: 2px;
   box-sizing: border-box;
   font-size: 14px;
   border: 2px solid rgba(34, 50, 194, 0.25);
@@ -537,13 +541,13 @@ table {
 .tblh {
   background-color: white;
   text-align: center;
-  padding: 30px;
-   border-bottom: 5px solid #ddd;
+  padding: 20px;
+   border-bottom: 4px solid #ddd;
 }
 
 .tbld {
   text-align: center;
-   border-bottom: 5px solid #ddd;
+   border-bottom: 4px solid #ddd;
 }
 /* th, td{
     border-bottom: 1px solid #ddd;
@@ -561,51 +565,7 @@ table {
 i {
   cursor: pointer;
 }
-#search {
-  background-image: url('../images/search.png');
-  background-position: 10px 7px;
-  background-size: 28px;
-  background-repeat: no-repeat;
-  width: 97%;
-  font-size: 15px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
-}
 
-#myUL {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#myUL li a {
-  border: 1px solid #ddd;
-  margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6;
-  padding: 12px;
-  text-decoration: none;
-  font-size: 18px;
-  color: black;
-  display: block
-}
-
-#myUL li a:hover:not(.header) {
-  background-color: #eee;
-}
-
-.chartimg{
-  margin-top:20px;
-  margin-right:20px;
-  padding:10px;
-}
-
-.se{
-    border-radius: 0.5rem;
-    margin: 2vw 1vw;
-    padding: 0.2vh 1vw;
-    grid-area: search;
-}
 
 
 
@@ -742,20 +702,21 @@ cursor: pointer;
 }
 
 input[type=text], select, textarea {
-width: 100%;
+width: 90%;
 padding: 12px;
 border: 1px solid #ccc;
-border-radius: 4px;
+border-radius: 10px;
 resize: vertical;
-margin-left: 80px;
+margin-left: -2px;
+height: 30px;
 }
 input[type=number],select{
-width: 100%;
+width: 90%;
 padding: 12px;
 border: 1px solid #ccc;
-border-radius: 4px;
+border-radius: 10px;
 resize: vertical;
-margin-left: 80px;
+margin-left: -2px;
 }
 
 label {
@@ -815,6 +776,34 @@ clear: both;
 }
 }
 
+/*order.php dropdown*/
+select{
+  border:none;
+  padding: 5px ;
+  width: fit-content;
+  margin-left: -2px;
+  border-radius:5px;
+  background: #4CAF50;
+}
+
+select:focus{
+  outline:none;
+}
+
+/*payment.php*/
+.butns {
+  background-color: #4CAF50;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  padding: 8px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  
+}
 
 
 
