--- a/css/tourist-tourpackage.css
+++ b/css/tourist-tourpackage.css
@@ -331,7 +331,7 @@ header .search-bar-container label:hover{
 .book .row form .inputBox h3{
   font-size: 2rem;
   padding:1rem 0;
-  color:#666;
+  color:#ffffff;
 }
 
 .packages .box-container{
