--- a/css/manageusers.css
+++ b/css/manageusers.css
@@ -160,3 +160,22 @@ color: #FF0000;
  td{
   margin-left: 10%;
  }
+
+ .viewbtn{
+  
+  position: absolute;
+width: 130px;
+height: 33px;
+left: 60%;
+vertical-align: middle;
+
+background: #D9D9D9;
+border-radius: 8px;
+
+font-style: normal;
+font-weight: 700;
+font-size: 13px;
+line-height: 20px;
+font-family: 'Days One', sans-serif;
+color: #000000;
+}
