--- a/css/hotel.css
+++ b/css/hotel.css
@@ -354,7 +354,7 @@ i {
 
 }
 .wrapper .right .info h3,
-.wrapper .right .projects h3{
+.wrapper .right .projets h3{
     margin-bottom: 15px;
     padding-bottom: 5px ;
     border-bottom: 1px solid #e0e0e0;
@@ -440,11 +440,11 @@ i {
     color: var(--mainColor);
     background-color: #004581;
     text-align: center;
-    display: inline-block;
+    /* display: inline; */
     cursor: pointer;
     border-radius: .5rem;
     padding: 0.5rem 1rem;
-    margin-left: 1rem;
+    /* margin-left: 1rem; */
     color: white;
     font-size: 16px;
 }
