--- a/css/nav.css
+++ b/css/nav.css
@@ -197,9 +197,9 @@
     display: none;
   }
 }
-hr{
+/* hr{
   margin-top:320px;
-}
+} */
 .sidebar div .tooltip{
   position: absolute;
   top: 120px;
