--- a/css/packagedescription.css
+++ b/css/packagedescription.css
@@ -35,7 +35,7 @@ body {
     font-family: montserrat;
     border-collapse: collapse;
     width: 70%;
-    margin-top: 25%;
+    margin-top: 10px;
     margin-left: 20%;
     margin-right: 10%;
   }
