--- a/css/sign.css
+++ b/css/sign.css
@@ -23,7 +23,7 @@ input[type=date]:focus {
 
 body {
     background-repeat: no-repeat;
-    background-image: url('./../view/signup.png');
+    background-image: url('./../images/signup.png');
     background-size: cover;
 }
 
@@ -101,7 +101,7 @@ body {
 }
 
 .btn-group {
-    margin-top: 100px;
+    margin-top: 30px;
 }
 
 div.btngrp {
@@ -113,9 +113,10 @@ div.up {
 }
 
 div.a {
-    margin-right: 553px;
+    margin-right: 540px;
     font-family: Poppins;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
 }
 
 div.b {
@@ -124,46 +125,58 @@ div.b {
 }
 
 div.c {
-    margin-right: 478px;
+    margin-right: 448px;
     font-family: Poppins;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
 }
 
 div.d {
-    margin-right: 521px;
+    margin-right: 505px;
     font-family: Poppins;
     margin-top: -20px;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
 }
 
 div.e {
-    margin-right: 555px;
+    margin-right: 545px;
     font-family: Poppins;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
+}
+div.s {
+    margin-right: 400px;
+    font-family: Poppins;
+    font-size: 15px;
 }
 
 div.f {
-    margin-right: 544px;
+    margin-right: 561px;
     font-family: Poppins;
     margin-top: -25px;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
 }
 
 div.g {
-    margin-right: 537px;
+    margin-right: 522px;
     font-family: Poppins;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
 }
 
 div.h {
-    margin-right: 500px;
+    margin-right: 478px;
     font-family: Poppins;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
 }
 div.j {
-    margin-right: 490px;
+    margin-right: 465px;
     font-family: Poppins;
-    color: #ffffff;
+    color: #000000;
+    font-size: 20px;
 }
 div.k {
     margin-right: 340px;
@@ -193,7 +206,7 @@ div.ln1 {
 }
 
 .homebtn {
-    background-color: #6cb8f7;
+    background-color: #1291f8;
     border: none;
     border-radius: 5px;
     color: rgb(255, 255, 255);
@@ -244,6 +257,7 @@ div.ln1 {
     font-size: 16px;
     line-height: 20px;
     margin-right: 60px;
+    margin-top: 30px;
 }
 
 .email-err {
