--- a/css/tourist.css
+++ b/css/tourist.css
@@ -48,3 +48,40 @@
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+
+.hotel{
+  text-transform: uppercase;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  padding: 5px;
+  text-decoration: none;
+  font-size: 35px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+p.sub{
+  color: rgb(0, 0, 0);
+  padding: 0px;
+  font-size: 18px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+div.search{
+  color: rgb(0, 0, 0);
+  padding: 0px;
+  font-size: 18px;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+.subfield {
+  font-family: sans-serif;
+  width: 200px;
+  height: 32px;
+  padding: 5px;
+  box-sizing: border-box;
+  font-size: 14px;
+  border-radius: 10px;
+  margin-top: 5px;
+  margin-left: 10px;
+}
