--- a/css/hotel.css
+++ b/css/hotel.css
@@ -505,4 +505,16 @@ p{
   margin:10px;
   padding:10px;
 }
+.piechart{
+  height:350px;
+  width: 350px;
+  padding: 10px;
+}
+.barchart{
+  height:450px;
+  width: 550px;
+  padding: 10px;
+}
+
+
 
